<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.modules.onboarding.Splash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/divider"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="207dp"
            android:layout_height="195dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/lms_tag"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:minHeight="50dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="#008977"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />


            <LinearLayout
                android:id="@+id/biometricLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="12sp"
                    android:layout_marginEnd="22dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/tab_layout_background"
                    app:tabBackground="@drawable/tab_background"
                    app:tabIndicator="@null"
                    app:tabRippleColor="@null"
                    app:tabSelectedTextColor="#0C3539"
                    app:tabTextAppearance="@style/TabTextStyle"
                    app:tabTextColor="#0C3539">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fingerprint" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/face" />

                </com.google.android.material.tabs.TabLayout>

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/confirm_biometric"
                    android:textColor="#0C3539"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/scan_your_finger"
                    android:textColor="#0C3539"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="104dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imgFingerprint"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/fingerprint_icon"
                        android:src="@drawable/ic_fingerprint"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/textCancelFace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/cancel"
                        android:textColor="#0C3539"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>